Python: log the status of '--python-use-system-env' on initialization

Report when the PYTHONPATH is expected to be used to help debug Python
initialization issues (see T98131).